# GraphRayTracer

./: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  BVHNode.cpp  BVHNode.h  Box.cpp  Box.h  CMakeLists.txt  Camera.h  FlipNormals.h  Geometry.cpp  Geometry.h  Hitable.h  Material.cpp  Material.h  ONB.h  ObjLoader.cpp  ObjLoader.h  PDF.h  PerlinNoise.cpp  PerlinNoise.h  README.md  Ray.h  RayTracer.cpp  RayTracer.h  Rectangle.cpp  Rectangle.h  RotateY.cpp  RotateY.h  Texture.h  Translate.cpp  Translate.h  Triangle.cpp  Triangle.h  Utils.cpp  Utils.h  Vec3.h  main.cpp
output/: temp1.ppm  temp2.ppm  temp3.ppm
src/: Color.cpp
